<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile_page"
        android:enabled="true"
        android:icon="@drawable/profile_clipart"
        android:title="@string/profile" />

    <item
        android:id="@+id/home_page"
        android:enabled="true"
        android:icon="@drawable/chiki_logo"
        android:title="@string/home" />

    <item
        android:id="@+id/chat_page"
        android:enabled="true"
        android:icon="@drawable/chat_clipart"
        android:title="@string/chat" />
</menu>