<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment"
    android:background="?attr/backgroundMain">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.yuyakaido.android.cardstackview.CardStackView
            android:id="@+id/cardStackView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toTopOf="@+id/superlikeFAB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/superlikeFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:scaleType="centerInside"
            app:backgroundTint="?attr/floatingBg"
            app:borderWidth="0dp"
            app:fabCustomSize="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/super_like"
            app:tint="@null"

            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/rewindFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"

            android:clickable="true"
            android:scaleType="centerInside"
            app:backgroundTint="?attr/floatingBg"
            app:borderWidth="0dp"
            app:fabCustomSize="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dislikeFAB"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.954"
            app:srcCompat="@drawable/rewind"
            app:tint="@null" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/dislikeFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:clickable="true"
            android:scaleType="centerInside"
            app:backgroundTint="?attr/floatingBg"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/superlikeFAB"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.954"
            app:maxImageSize="25dp"
            app:srcCompat="@drawable/dislike"
            app:tint="@null" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/likeFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:clickable="true"
            android:scaleType="centerInside"
            app:backgroundTint="?attr/floatingBg"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/superlikeFAB"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.954"
            app:maxImageSize="30dp"
            app:srcCompat="@drawable/like"
            app:tint="@null" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/boostFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:clickable="true"
            android:scaleType="centerInside"
            app:backgroundTint="?attr/floatingBg"
            app:borderWidth="0dp"
            app:fabCustomSize="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/likeFAB"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.953"
            app:srcCompat="@drawable/boost"
            app:tint="@null" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>